<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_reload"
        android:title="@string/action_reload"
        android:icon="@android:drawable/ic_menu_rotate"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_reconnect"
        android:title="@string/action_reconnect"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_keep_alive"
        android:title="@string/keep_alive_toggle"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        android:icon="@android:drawable/ic_menu_help"
        app:showAsAction="never" />

</menu>
